--- a/manual_responsavel/output/03_estruturas_geotecnicas.html
+++ b/manual_responsavel/output/03_estruturas_geotecnicas.html
@@ -177,7 +177,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>A tela Estruturas Geotécnicas exibe uma lista das estruturas relacionadas a(os) TAC(s) do <em>Responsável</em>. Nesta tela, é possível gerenciar as estruturas geotécnicas, incluindo pesquisa, visualização, edição e adição de coordenadas das estruturas (<a href="#figu-tela03" class="quarto-xref">Figura&nbsp;<span>3.1</span></a>).</p>
+<p>A tela Estruturas Geotécnicas exibe uma lista das estruturas relacionadas ao(s) TAC(s) do <em>Responsável</em>. Nesta tela, é possível gerenciar as estruturas geotécnicas, incluindo pesquisa, visualização, edição e adição de coordenadas das estruturas (<a href="#figu-tela03" class="quarto-xref">Figura&nbsp;<span>3.1</span></a>).</p>
 <div id="figu-tela03" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-figu figure">
 <div aria-describedby="figu-tela03-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
@@ -312,7 +312,7 @@ Nota
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>O usuário <em>Responsável</em> poderá editar as coordenadas; no entanto, isso depende da aprovação do administrador do sistema.</p>
+<p>O usuário <em>Responsável</em> poderá editar as coordenadas; no entanto, a aprovação depende do administrador do sistema.</p>
 </div>
 </div>
 <div id="figu-editar-estrutura" class="quarto-float quarto-figure quarto-figure-center anchored">
