--- a/manual_admin/output/03_usuarios.html
+++ b/manual_admin/output/03_usuarios.html
@@ -103,9 +103,6 @@ ul.task-list li input[type="checkbox"] {
       </a>
     <div class="sidebar-title mb-0 py-0">
       <a href="./">Sisvar - Manual do Usuário</a> 
-        <div class="sidebar-tools-main">
-    <a href="./Sisvar---Manual-do-Usuário.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
-</div>
     </div>
       </div>
         <div class="mt-2 flex-shrink-0 align-items-center">
@@ -209,7 +206,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>A tela Usuários exibe uma lista dos usuários cadastrados no Sisvar, organizados por Função. Nesta tela, é possível gerenciar os usuários, incluindo busca, visualização, edição, exclusão e adição de usuários (<a href="#figu-tela03" class="quarto-xref">Figura&nbsp;<span>3.1</span></a>).</p>
+<p>A tela Usuários exibe uma lista dos usuários cadastrados no Sisvar, organizados por Função. Nesta tela, é possível gerenciar os usuários, incluindo pesquisa, visualização, edição, exclusão e adição de usuários (<a href="#figu-tela03" class="quarto-xref">Figura&nbsp;<span>3.1</span></a>).</p>
 <div id="figu-tela03" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-figu figure">
 <div aria-describedby="figu-tela03-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
