--- a/manual_admin/output/04_convidados.html
+++ b/manual_admin/output/04_convidados.html
@@ -103,9 +103,6 @@ ul.task-list li input[type="checkbox"] {
       </a>
     <div class="sidebar-title mb-0 py-0">
       <a href="./">Sisvar - Manual do Usuário</a> 
-        <div class="sidebar-tools-main">
-    <a href="./Sisvar---Manual-do-Usuário.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
-</div>
     </div>
       </div>
         <div class="mt-2 flex-shrink-0 align-items-center">
@@ -248,19 +245,6 @@ Figura&nbsp;4.2: Formulário para envio de convite
 </div>
 <p>No campo Função, ao escolher a opção <em>Gestor ou Responsável</em>, as opções do campo Auditoria serão exibidas conforme cadastradas na tela <a href="05_auditorias.html">Auditorias</a>.</p>
 <p>A principal diferença desta tela em relação à tela <a href="03_usuarios.html">Usuários</a> é que, aqui, o convite é enviado para o e-mail cadastrado, de forma que existe o histórico acerca da inserção do usuário no Sisvar.</p>
-<div class="callout callout-style-simple callout-note callout-titled">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<div class="callout-title-container flex-fill">
-Nota
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<p>O usuário convidado tem até 7 dias para aceitar o convite e criar sua senha.</p>
-</div>
-</div>
 <div id="figu-email" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-figu figure">
 <div aria-describedby="figu-email-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
@@ -279,10 +263,36 @@ Figura&nbsp;4.3: E-mail convite
 </figcaption>
 </figure>
 </div>
+<div class="callout callout-style-simple callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Nota
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>O usuário convidado tem até 7 dias para aceitar o convite e criar sua senha.</p>
+</div>
+</div>
 </section>
 <section id="excluir-convite" class="level2" data-number="4.2">
 <h2 data-number="4.2" class="anchored" data-anchor-id="excluir-convite"><span class="header-section-number">4.2</span> Excluir convite</h2>
 <p>O usuário com perfil de <em>Instituição Admin</em> pode excluir qualquer convite da listagem, independentemente do seu status, ao clicar no ícone Excluir.</p>
+<div class="callout callout-style-simple callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Nota
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>A exclusão de convite Aceito não exclui um usuário. Por outro lado, a exclusão de convite Aguardando impede que o novo usuário se cadastre.</p>
+</div>
+</div>
 
 
 </section>
