--- a/manual_admin/output/05_auditorias.html
+++ b/manual_admin/output/05_auditorias.html
@@ -103,9 +103,6 @@ ul.task-list li input[type="checkbox"] {
       </a>
     <div class="sidebar-title mb-0 py-0">
       <a href="./">Sisvar - Manual do Usuário</a> 
-        <div class="sidebar-tools-main">
-    <a href="./Sisvar---Manual-do-Usuário.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
-</div>
     </div>
       </div>
         <div class="mt-2 flex-shrink-0 align-items-center">
@@ -208,7 +205,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>A tela Auditorias exibe uma lista das auditorias cadastradas no Sisvar, organizadas em ordem alfabética. Nesta tela, é possível gerenciar as auditorias, incluindo busca, edição, exclusão e adição de novas auditorias, além da exibição dos TACs relacionados a cada auditoria (<a href="#figu-tela05" class="quarto-xref">Figura&nbsp;<span>5.1</span></a>).</p>
+<p>A tela Auditorias exibe uma lista das auditorias cadastradas no Sisvar, organizadas em ordem alfabética. Nesta tela, é possível gerenciar as auditorias, incluindo pesquisa, edição, exclusão e adição de novas auditorias, além da exibição dos TACs relacionados a cada auditoria (<a href="#figu-tela05" class="quarto-xref">Figura&nbsp;<span>5.1</span></a>).</p>
 <div id="figu-tela05" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-figu figure">
 <div aria-describedby="figu-tela05-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
