--- a/manual_admin/output/07_estruturas_geotecnicas.html
+++ b/manual_admin/output/07_estruturas_geotecnicas.html
@@ -103,9 +103,6 @@ ul.task-list li input[type="checkbox"] {
       </a>
     <div class="sidebar-title mb-0 py-0">
       <a href="./">Sisvar - Manual do Usuário</a> 
-        <div class="sidebar-tools-main">
-    <a href="./Sisvar---Manual-do-Usuário.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
-</div>
     </div>
       </div>
         <div class="mt-2 flex-shrink-0 align-items-center">
@@ -322,7 +319,7 @@ Figura&nbsp;7.4: Tela Validar/Reprovar estrutura geotécnica
 </figure>
 </div>
 <ol start="7" type="1">
-<li>O usuário com Função de <strong><em>Instituição Admin</em></strong> busca a estrutura geotécnica na lista-base e edita suas informações para incluir o complexo minerário/mina.</li>
+<li>O usuário com Função de <strong><em>Instituição Admin</em></strong> pesquisa a estrutura geotécnica na lista-base e edita suas informações para incluir o complexo minerário/mina.</li>
 </ol>
 <div class="callout callout-style-simple callout-note callout-titled">
 <div class="callout-header d-flex align-content-center">
@@ -385,7 +382,7 @@ Figura&nbsp;7.6: Tela Exibir estrutura geotécnica
 </section>
 <section id="editar" class="level2" data-number="7.4">
 <h2 data-number="7.4" class="anchored" data-anchor-id="editar"><span class="header-section-number">7.4</span> Editar</h2>
-<p>O botão de ação <strong>Editar</strong> permite ao usuário <em>Instituição Admin</em> modificar as informações de Complexo minerário e Coordenadas de qualquer estrutura geotécnica (<a href="#figu-editar-estrutura" class="quarto-xref">Figura&nbsp;<span>7.7</span></a>).</p>
+<p>O botão de ação <strong>Editar</strong> permite ao usuário <em>Instituição Admin</em> modificar as informações de complexo minerário e coordenadas de qualquer estrutura geotécnica (<a href="#figu-editar-estrutura" class="quarto-xref">Figura&nbsp;<span>7.7</span></a>).</p>
 <div id="figu-editar-estrutura" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-figu figure">
 <div aria-describedby="figu-editar-estrutura-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
