--- a/manual_gestor/output/02_usuarios.html
+++ b/manual_gestor/output/02_usuarios.html
@@ -103,9 +103,6 @@ ul.task-list li input[type="checkbox"] {
       </a>
     <div class="sidebar-title mb-0 py-0">
       <a href="./">Sisvar - Manual do Usuário</a> 
-        <div class="sidebar-tools-main">
-    <a href="./Sisvar---Manual-do-Usuário.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
-</div>
     </div>
       </div>
         <div class="mt-2 flex-shrink-0 align-items-center">
@@ -170,6 +167,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#procurar" id="toc-procurar" class="nav-link active" data-scroll-target="#procurar"><span class="header-section-number">2.1</span> Procurar</a></li>
   <li><a href="#exibir" id="toc-exibir" class="nav-link" data-scroll-target="#exibir"><span class="header-section-number">2.2</span> Exibir</a></li>
   <li><a href="#editar" id="toc-editar" class="nav-link" data-scroll-target="#editar"><span class="header-section-number">2.3</span> Editar</a></li>
+  <li><a href="#excluir" id="toc-excluir" class="nav-link" data-scroll-target="#excluir"><span class="header-section-number">2.4</span> Excluir</a></li>
   </ul>
 </nav>
     </div>
@@ -195,7 +193,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>A tela Usuários exibe uma lista dos usuários relacionados à auditoria do <em>Gestor</em>, organizados por Função. Nesta tela, é possível gerenciar os usuários, incluindo busca, visualização e edição de usuários (<a href="#figu-tela03" class="quarto-xref">Figura&nbsp;<span>2.1</span></a>).</p>
+<p>A tela Usuários exibe uma lista dos usuários relacionados à auditoria do <em>Gestor</em>, organizados por Função. Nesta tela, é possível gerenciar os usuários, incluindo pesquisa, visualização, edição e exclusão de usuários (<a href="#figu-tela03" class="quarto-xref">Figura&nbsp;<span>2.1</span></a>).</p>
 <div id="figu-tela03" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-figu figure">
 <div aria-describedby="figu-tela03-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
@@ -203,7 +201,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="images/02_usuarios/tela03.png" class="img-fluid figure-img" width="666"></p>
+<p><img src="images/02_usuarios/tela03.png" class="img-fluid figure-img" width="620"></p>
 </figure>
 </div>
 </div>
@@ -244,6 +242,23 @@ Figura&nbsp;2.2: Tela Usuários
 <section id="editar" class="level2" data-number="2.3">
 <h2 data-number="2.3" class="anchored" data-anchor-id="editar"><span class="header-section-number">2.3</span> Editar</h2>
 <p>O botão de ação <strong>Editar</strong> permite ao usuário <em>Gestor</em> modificar as informações do usuário <em>Responsável</em>, com ênfase na alteração da Função (de <em>Responsável</em> para <em>Gestor</em>).</p>
+</section>
+<section id="excluir" class="level2" data-number="2.4">
+<h2 data-number="2.4" class="anchored" data-anchor-id="excluir"><span class="header-section-number">2.4</span> Excluir</h2>
+<p>O botão de ação <strong>Excluir</strong> permite ao usuário <em>Gestor</em> suprimir usuários <em>Gestor</em> e <em>Responsável</em>.</p>
+<div class="callout callout-style-simple callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Nota
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>O botão de ação só é apresentado para os usuários <em>Gestor</em> ou <em>Responsável</em> que tenham sido convidados pelo próprio <em>Gestor</em>.</p>
+</div>
+</div>
 
 
 </section>
