--- a/manual_gestor/output/03_convidados.html
+++ b/manual_gestor/output/03_convidados.html
@@ -103,9 +103,6 @@ ul.task-list li input[type="checkbox"] {
       </a>
     <div class="sidebar-title mb-0 py-0">
       <a href="./">Sisvar - Manual do Usuário</a> 
-        <div class="sidebar-tools-main">
-    <a href="./Sisvar---Manual-do-Usuário.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
-</div>
     </div>
       </div>
         <div class="mt-2 flex-shrink-0 align-items-center">
@@ -194,7 +191,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>A tela Convidados exibe uma lista dos usuários relacionados à auditoria do <em>Gestor</em> que receberam convites para acessar o Sisvar. Nessa tela, é possível gerenciar informações sobre quem enviou o convite, o status do convite (Aceito ou Aguardando) e, quando aplicável, a data de aceite. Além disso, é possível pesquisar, excluir e enviar convites (<a href="#figu-tela04" class="quarto-xref">Figura&nbsp;<span>3.1</span></a>).</p>
+<p>A tela Convidados exibe uma lista dos usuários relacionados à auditoria do <em>Gestor</em> que receberam convites para acessar o Sisvar. Nessa tela, é possível gerenciar informações sobre quem enviou o convite, o status do convite (Aguardando ou Aceito) e, quando aplicável, a data de aceite. Além disso, é possível pesquisar, excluir e enviar convites (<a href="#figu-tela04" class="quarto-xref">Figura&nbsp;<span>3.1</span></a>).</p>
 <div id="figu-tela04" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-figu figure">
 <div aria-describedby="figu-tela04-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
@@ -234,19 +231,6 @@ Figura&nbsp;3.2: Formulário para envio de convite
 </figcaption>
 </figure>
 </div>
-<div class="callout callout-style-simple callout-note callout-titled">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<div class="callout-title-container flex-fill">
-Nota
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<p>O usuário convidado tem até 7 dias para aceitar o convite e criar sua senha.</p>
-</div>
-</div>
 <div id="figu-email" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-figu figure">
 <div aria-describedby="figu-email-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
@@ -265,10 +249,36 @@ Figura&nbsp;3.3: E-mail convite
 </figcaption>
 </figure>
 </div>
+<div class="callout callout-style-simple callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Nota
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>O usuário convidado tem até 7 dias para aceitar o convite e criar sua senha.</p>
+</div>
+</div>
 </section>
 <section id="excluir-convite" class="level2" data-number="3.2">
 <h2 data-number="3.2" class="anchored" data-anchor-id="excluir-convite"><span class="header-section-number">3.2</span> Excluir convite</h2>
 <p>O usuário com perfil de <em>Gestor</em> pode excluir qualquer convite da listagem, independentemente do seu status, ao clicar no ícone Excluir.</p>
+<div class="callout callout-style-simple callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Nota
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>A exclusão de convite Aceito não exclui um usuário. Por outro lado, a exclusão de convite Aguardando impede que o novo usuário se cadastre.</p>
+</div>
+</div>
 
 
 </section>
