--- a/manual_gestor/output/04_auditorias.html
+++ b/manual_gestor/output/04_auditorias.html
@@ -103,9 +103,6 @@ ul.task-list li input[type="checkbox"] {
       </a>
     <div class="sidebar-title mb-0 py-0">
       <a href="./">Sisvar - Manual do Usuário</a> 
-        <div class="sidebar-tools-main">
-    <a href="./Sisvar---Manual-do-Usuário.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
-</div>
     </div>
       </div>
         <div class="mt-2 flex-shrink-0 align-items-center">
@@ -187,7 +184,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>A tela Auditoria exibe o quantitativo de TACs e Usuários relacionados à auditoria do <em>Gestor</em> (<a href="#figu-tela05" class="quarto-xref">Figura&nbsp;<span>4.1</span></a>).</p>
+<p>A tela possui o nome da Auditoria do <em>Gestor</em>. Nela é possível visualizar o quantitativo de TACs e Usuários relacionados à sua auditoria, bem como acessar rapidamente a listagem correspondente a essas informações (<a href="#figu-tela05" class="quarto-xref">Figura&nbsp;<span>4.1</span></a>).</p>
 <div id="figu-tela05" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-figu figure">
 <div aria-describedby="figu-tela05-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
@@ -206,7 +203,7 @@ Figura&nbsp;4.1: Tela Auditoria
 </figcaption>
 </figure>
 </div>
-<p>Ao clicar no botão <strong>Conferir</strong>, o usuário será redirecionado à tela <a href="05_tacs.html">TACs</a> e serão exibidos os TACs relacionados à auditoria do <em>Gestor</em> ou à tela <a href="02_usuarios.html">Usuários</a> e serão exibidos os Usuários relacionados à auditoria do <em>Gestor</em> (<a href="#figu-tela05" class="quarto-xref">Figura&nbsp;<span>4.1</span></a>).</p>
+<p>Ao clicar no botão <strong>Conferir</strong> do cartão TACs, o usuário será redirecionado à tela <a href="05_tacs.html">TACs</a> e serão exibidos os TACs relacionados à auditoria do <em>Gestor</em>. Por sua vez, ao clicar no botão <strong>Conferir</strong> do cartão Usuários, o usuário será redirecionado à tela <a href="02_usuarios.html">Usuários</a> (<a href="#figu-tela05" class="quarto-xref">Figura&nbsp;<span>4.1</span></a>).</p>
 
 
 
