--- a/manual_gestor/output/06_estruturas_geotecnicas.html
+++ b/manual_gestor/output/06_estruturas_geotecnicas.html
@@ -102,9 +102,6 @@ ul.task-list li input[type="checkbox"] {
       </a>
     <div class="sidebar-title mb-0 py-0">
       <a href="./">Sisvar - Manual do Usuário</a> 
-        <div class="sidebar-tools-main">
-    <a href="./Sisvar---Manual-do-Usuário.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
-</div>
     </div>
       </div>
         <div class="mt-2 flex-shrink-0 align-items-center">
@@ -270,7 +267,7 @@ Figura&nbsp;6.3: Tela adicionar coordenadas
 <li>Em caso de validação, o fluxo segue para o passo 7.</li>
 </ul>
 <ol start="7" type="1">
-<li>O administrador do sistema busca a estrutura geotécnica na lista-base e edita suas informações para incluir o complexo minerário/mina.</li>
+<li>O administrador do sistema pesquisa a estrutura geotécnica na lista-base e edita suas informações para incluir o complexo minerário/mina.</li>
 </ol>
 </section>
 <section id="procurar" class="level2" data-number="6.2">
@@ -319,7 +316,7 @@ Figura&nbsp;6.5: Tela Exibir estrutura geotécnica
 </section>
 <section id="editar" class="level2" data-number="6.4">
 <h2 data-number="6.4" class="anchored" data-anchor-id="editar"><span class="header-section-number">6.4</span> Editar</h2>
-<p>O botão de ação <strong>Editar</strong> permite ao usuário <em>Gestor</em> modificar as informações de Coordenadas de qualquer estrutura geotécnica (<a href="#figu-editar-estrutura" class="quarto-xref">Figura&nbsp;<span>6.6</span></a>).</p>
+<p>O botão de ação <strong>Editar</strong> permite ao usuário <em>Gestor</em> modificar as informações de coordenadas de qualquer estrutura geotécnica (<a href="#figu-editar-estrutura" class="quarto-xref">Figura&nbsp;<span>6.6</span></a>).</p>
 <div class="callout callout-style-simple callout-note callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
@@ -330,7 +327,7 @@ Nota
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>O usuário <em>Gestor</em> poderá editar as coordenadas; no entanto, isso depende da aprovação do administrador do sistema.</p>
+<p>O usuário <em>Gestor</em> poderá editar as coordenadas; no entanto, a aprovação depende do administrador do sistema.</p>
 </div>
 </div>
 <div id="figu-editar-estrutura" class="quarto-float quarto-figure quarto-figure-center anchored">
