--- a/manual_responsavel/output/02_tacs.html
+++ b/manual_responsavel/output/02_tacs.html
@@ -103,9 +103,6 @@ ul.task-list li input[type="checkbox"] {
       </a>
     <div class="sidebar-title mb-0 py-0">
       <a href="./">Sisvar - Manual do Usuário</a> 
-        <div class="sidebar-tools-main">
-    <a href="./Sisvar---Manual-do-Usuário.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
-</div>
     </div>
       </div>
         <div class="mt-2 flex-shrink-0 align-items-center">
@@ -227,7 +224,7 @@ Figura&nbsp;2.2: Tela Submissões
 <p>No campo <strong>Descrição</strong> as planilhas submetidas podem apresentar três diferentes resultados:</p>
 <ul>
 <li><em><u>Cancelada</u></em>: quando uma submissão é cancelada antes da finalização do processo de validação.</li>
-<li><em><u>Descartada</u></em>: quando uma submissão é descartada após a conclusão do processo de validação devido a erros que impedem sua validação.</li>
+<li><em><u>Descartada</u></em>: quando uma submissão é descartada após a conclusão do processo de validação em função de erros que impedem sua validação.</li>
 <li><em><u>Validada</u></em>: quando uma submissão é validada após a conclusão do processo de validação sem erros impeditivos.</li>
 </ul>
 <p>O processo de validação das planilhas submetidas passa por uma avaliação criteriosa, desde a estrutura do cabeçalho até a última coluna da planilha. As inconsistências encontradas podem ser classificadas como:</p>
@@ -293,7 +290,7 @@ Figura&nbsp;2.4: Tela Nomes alternativos
 </figure>
 </div>
 <p>Por padrão, não existe um “nome fantasia” para um TAC. O CIGA criou esses nomes para facilitar a identificação. As auditorias também criaram seus próprios “nomes fantasia”, o que pode resultar em discrepâncias entre os nomes dos TACs cadastrados no CIGA e os utilizados pelas auditorias (que podem usar nomes muito longos, sem acentuação ou até mesmo em inglês).</p>
-<p>Neste sentido, para evitar que a validação seja impedida de ocorrer devido a diferenças nos “nomes fantasia”, é possível criar nomes alternativos (conhecidos como “<em>alias</em>” em inglês). O nome alternativo, assim como o nome fantasia, é único, não sendo possível ocorrer repetição desses nomes no Sisvar.</p>
+<p>Neste sentido, para evitar que a validação seja impedida de ocorrer em função de diferenças nos “nomes fantasia”, é possível criar nomes alternativos (conhecidos como “<em>alias</em>” em inglês). O nome alternativo, assim como o nome fantasia, é único, não sendo possível ocorrer repetição desses nomes no Sisvar.</p>
 <div class="callout callout-style-simple callout-tip callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
@@ -305,6 +302,19 @@ Exemplo - Nome Alternativo
 </div>
 <div class="callout-body-container callout-body">
 <p>Se a RIZZO utilizasse “TAC Gongo Soco” em sua planilha e já tivesse criado um nome alternativo como “Gongo Soco”, a SLR, ao assumir esse TAC, não conseguiria utilizar “TAC Gongo Soco” nem “Gongo Soco” em sua planilha. Um novo nome alternativo - ou o próprio valor do campo TAC, na planilha-modelo - deverão ser criados diferentemente aos nomes já definidos no Sisvar.</p>
+</div>
+</div>
+<div class="callout callout-style-simple callout-important callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Atenção
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>TACs com diferentes datas de assinatura e/ou escopos devem ter sua submissão de forma individual no Sisvar.</p>
 </div>
 </div>
 </section>
