--- a/manual_admin/output/05_auditorias.html
+++ b/manual_admin/output/05_auditorias.html
@@ -226,7 +226,7 @@ Figura&nbsp;5.1: Tela Auditorias
 </div>
 <section id="criar" class="level2" data-number="5.1">
 <h2 data-number="5.1" class="anchored" data-anchor-id="criar"><span class="header-section-number">5.1</span> Criar</h2>
-<p>O usuário com Função de <em>Instituição Admin</em> pode clicar no botão **Nova Auditoria* e cadastrar a auditoria preenchendo os campos Nome e Código da auditoria. O código deve conter 3 caracteres, sendo os 2 primeiros obrigatoriamente letras (<a href="#figu-criar-auditoria" class="quarto-xref">Figura&nbsp;<span>5.2</span></a>).</p>
+<p>O usuário com Função de <em>Instituição Admin</em> pode clicar no botão <strong>Nova Auditoria</strong> e cadastrar a auditoria preenchendo os campos Nome e Código da auditoria. O código deve conter 3 caracteres, sendo os 2 primeiros obrigatoriamente letras (<a href="#figu-criar-auditoria" class="quarto-xref">Figura&nbsp;<span>5.2</span></a>).</p>
 <div id="figu-criar-auditoria" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-figu figure">
 <div aria-describedby="figu-criar-auditoria-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
