--- a/manual_admin/output/06_tacs.html
+++ b/manual_admin/output/06_tacs.html
@@ -388,14 +388,17 @@ Exemplo - Nome Alternativo
 <p>Se a RIZZO utilizasse “TAC Gongo Soco” em sua planilha e já tivesse criado um nome alternativo como “Gongo Soco”, a SLR, ao assumir esse TAC, não conseguiria utilizar “TAC Gongo Soco” nem “Gongo Soco” em sua planilha. Um novo nome alternativo - ou o próprio valor do campo TAC, na planilha-modelo - deverão ser criados diferentemente aos nomes já definidos no Sisvar.</p>
 </div>
 </div>
-<div class="callout callout-style-simple callout-important">
-<div class="callout-body d-flex">
+<div class="callout callout-style-simple callout-important callout-titled">
+<div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
 <i class="callout-icon"></i>
 </div>
-<div class="callout-body-container">
-<p>TACs com diferentes datas de assinatura e/ou escopos devem ser incluídos separadamente e ter sua submissão de forma individual no Sisvar.</p>
+<div class="callout-title-container flex-fill">
+Atenção
 </div>
+</div>
+<div class="callout-body-container callout-body">
+<p>TACs com diferentes datas de assinatura e/ou escopos devem ser incluídos separadamente e ter sua submissão de forma individual no Sisvar.</p>
 </div>
 </div>
 </section>
